bsrs-ember/app/styles/resets/ember-power-select.scss
.ember-power-select{
	.ember-power-select-trigger{
		min-height: 34px;
		min-width: 120px;
		background-image: none;
		line-height: 34px;
		padding: 0 36px 0 12px !important;
		text-overflow: ellipsis;
		overflow: hidden;
		border-radius: $borderRadius;
		border-color: $gray;
		color: $dark;

		.ember-power-select-status-icon {
			right: 10px;
			border-width: 5px 4px 0 4px;
			border-color: $darkGray transparent transparent transparent;
		}
	}
	.ember-power-select-trigger[aria-expanded=true]{
		border-color: $activeColor;
		outline: 0;
		-webkit-box-shadow: none;
		box-shadow: none;
		border-radius: $borderRadiusTop;
		background-image: none !important;
		position: relative;
		z-index: 1;
		input[type="search"] {
			display: block;
			margin: 4px 0 0;
			padding: 0 1px;
		}
	}
}
.ember-power-select-multiple{
	.ember-power-select-trigger{
		line-height: 0;
		padding: 1px 36px 4px 4px !important;
		.ember-power-select-multiple-options{
			max-width: 100%;
			.ember-power-select-multiple-option{
				border-radius: $borderRadius;
				border: $borderStyle;
				background: $light;
				margin: 4px 4px 0 0;
				padding: 0 3px 0 5px;
				line-height: 20px;
				max-width: 100%;
		    @include trucate;
				.ember-power-select-multiple-remove-btn:hover,
				.ember-power-select-multiple-remove-btn:not(:hover){
					opacity: 1;
					color: $medGray;
					border-radius: $borderRadius;
					background: $gray;
					float: right;
					height: 15px;
					width: 15px;
					line-height: 15px;
					text-align: center;
					margin: 3px 0 0 3px;
				}
				.ember-power-select-multiple-remove-btn:hover{
					background: $orange;
					color: $white;
				}

			}
		}
		.ember-power-select-trigger-multiple-input{
			height: 22px;
			padding: 3px;
		}
	}
}
.ember-power-select-trigger:focus{
	outline: none;
	border: $borderStyle !important;
	&[aria-expanded="true"]{
		border: 1px solid $activeColor !important;
	}
}
#ember-basic-dropdown-wormhole,
.ember-basic-dropdown--in-place{
	.ember-power-select-dropdown{
		font-size: 1.4rem;
		border-color: $activeColor !important;
		border-radius: $borderRadius;
		&.below{
			border-radius: $borderRadiusBottom;
		}
		&.above{
			border-radius: $borderRadiusBottom;
		}
	}
	.ember-power-select-search input{
		border: $borderStyle;
		&:focus{
			border-color: $activeColor;
		}
	}
	.ember-power-select-option{
		padding: 3px 12px;
		&.ember-power-select-option[aria-selected=true]{
			color: $medGray;
			background-color: $light;
		}
		&.ember-power-select-option[aria-current=true]{
			color: $white;
			background-color: $hoverColor;
		}
	}
	.ember-power-select-option[aria-selected=true]{
		background: $light;
	}
	&.ember-power-select-option[aria-current=true]{
		background: $hoverColor;
	}
	.ember-basic-dropdown--below{
		border-radius: 0 0 2px 2px;
	}

	.ember-basic-dropdown--above{
		border-radius: 2px 2px 0 0;
	}

	.ticket-priority-select,
	.ticket-status-select{
		li{
			font-size: 1.2rem;
		}
	}
}

